# grpc-example

./: README.md  gRPC-python.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
account_client/account_client/: account_client.py  account_pb2.py  account_pb2.pyi  account_pb2_grpc.py
account_server/account_server/: account_pb2.py  account_pb2_grpc.py  account_server.py
account_server/account_server/account/: __init__.py
protos/: account.proto
